--- a/client/src/components/app.scss
+++ b/client/src/components/app.scss
@@ -43,7 +43,7 @@
     }
   }
 
-  .container {
+  .cont {
     border: 1px solid #DEDEDE;
     padding: 12px;
     box-shadow: 0 0 4px 4px #DEDEDE; 
