--- a/client/src/components/Cart.css
+++ b/client/src/components/Cart.css
@@ -10,3 +10,12 @@
 .game-modal{
     height: 100vh;
 }
+.prod-img{
+    width:100px
+}
+h1{
+    text-align: center;
+}
+.chat-btn{
+    margin-left: 100px;
+}
